syntax = "proto3";

option go_package = "github.com/umamaheswari76/sftp_go";

package grpc_rw;

service GrpcRwService {
    rpc Upload (stream FileUploadRequest) returns (FileUploadResponse){}
}

message FileUploadRequest {
    string file_name = 1;
    bytes chunk = 2;
}
  
message FileUploadResponse {
  string file_name = 1;
  uint32 size = 2;
}